chore: complete v1.4 milestone
Archived:
- milestones/v1.4-ROADMAP.md
- milestones/v1.4-REQUIREMENTS.md
- milestones/v1.4-MILESTONE-AUDIT.md

Deleted (fresh for next milestone):
- ROADMAP.md
- REQUIREMENTS.md

Updated:
- MILESTONES.md (new entry)
- PROJECT.md (requirements → Validated, Current State added)
- STATE.md (reset for next milestone)

Tagged: v1.4.0

--- a/.planning/milestones/v1.4-REQUIREMENTS.md
+++ b/.planning/milestones/v1.4-REQUIREMENTS.md
@@ -1,3 +1,13 @@
+# Requirements Archive: v1.4 Package Structure
+
+**Archived:** 2026-01-28
+**Status:** SHIPPED
+
+This is the archived requirements specification for v1.4.
+For current requirements, see `.planning/REQUIREMENTS.md` (created for next milestone).
+
+---
+
 # Requirements: File Matcher v1.4
 
 **Defined:** 2026-01-27
@@ -38,35 +48,7 @@ Requirements for package structure refactoring. Each maps to roadmap phases.
 - [x] **TEST-02**: Test imports updated to `from filematcher import X` pattern
 - [x] **TEST-03**: No major test file rewrites required (import changes only)
 
-## Future Requirements
-
-Deferred to future milestones. Tracked but not in current roadmap.
-
-### Documentation
-
-- **DOC-01**: Update CLAUDE.md with new package structure
-- **DOC-02**: Add architecture diagram showing module dependencies
-
-### Optional Enhancements
-
-- **ENH-01**: Deprecation warnings for direct `file_matcher` imports
-- **ENH-02**: Type stubs (`.pyi` files) for better IDE support
-
-## Out of Scope
-
-Explicitly excluded. Documented to prevent scope creep.
-
-| Feature | Reason |
-|---------|--------|
-| src/ layout | Flat layout better suits existing test infrastructure |
-| Namespace packages | Overkill for single-package project |
-| Separate distribution packages | Single package is simpler, no benefit from splitting |
-| Breaking backward compat | Core constraint of this milestone |
-| External dependencies | Maintains pure stdlib requirement |
-
 ## Traceability
-
-Which phases cover which requirements. Updated during roadmap creation.
 
 | Requirement | Phase | Status |
 |-------------|-------|--------|
@@ -93,8 +75,16 @@ Which phases cover which requirements. Updated during roadmap creation.
 **Coverage:**
 - v1.4 requirements: 19 total
 - Mapped to phases: 19
+- Completed: 19
 - Unmapped: 0
 
 ---
-*Requirements defined: 2026-01-27*
-*Last updated: 2026-01-28 - All v1.4 requirements complete*
+
+## Milestone Summary
+
+**Shipped:** 19 of 19 v1.4 requirements
+**Adjusted:** None - all requirements completed as specified
+**Dropped:** None
+
+---
+*Archived: 2026-01-28 as part of v1.4 milestone completion*
