fix(19): revise plans based on checker feedback
- Fix execute_action signature: (dup, master, action.value, ...) -> (success, error, actual_action)
- Add log_operation calls for audit logging after each action
- Add space_saved tracking (get file_size BEFORE action)
- Add FailedOperation import and proper error tracking
- Add must_haves for space_saved and audit_logger integration
- Add test for space_saved verification in 19-02
- Update min_lines for test file to 150

--- a/.planning/phases/19-interactive-core/19-01-PLAN.md
+++ b/.planning/phases/19-interactive-core/19-01-PLAN.md
@@ -16,6 +16,8 @@ must_haves:
     - "User can respond q/Q/quit/QUIT to stop processing"
     - "Invalid input shows error message and re-prompts"
     - "Each confirmed group executes immediately before next group displayed"
+    - "space_saved tracks file sizes of successfully processed duplicates"
+    - "audit_logger receives log_operation calls for each file action"
   artifacts:
     - path: "filematcher/cli.py"
       provides: "interactive_execute(), prompt_for_group(), _normalize_response()"
@@ -28,7 +30,11 @@ must_haves:
     - from: "filematcher/cli.py:interactive_execute"
       to: "filematcher/actions.py:execute_action"
       via: "execute each confirmed group immediately"
-      pattern: "execute_action|execute_all_actions"
+      pattern: "execute_action\\(dup, master_file, action\\.value"
+    - from: "filematcher/cli.py:interactive_execute"
+      to: "filematcher/actions.py:log_operation"
+      via: "audit logging after each action"
+      pattern: "log_operation\\(audit_logger"
 ---
 
 <objective>
@@ -137,13 +143,14 @@ Run: `python3 -c "from filematcher.cli import prompt_for_group; print('prompt_fo
   <name>Task 3: Add interactive_execute function</name>
   <files>filematcher/cli.py</files>
   <action>
-Add import for `execute_action` from filematcher.actions at the top (update existing import line):
+Add import for `execute_action` and `log_operation` from filematcher.actions at the top (update existing import line):
 
 ```python
 from filematcher.actions import (
     create_audit_logger, write_log_header, log_operation, write_log_footer,
     execute_all_actions, execute_action, determine_exit_code,
 )
+from filematcher.types import FailedOperation
 ```
 
 Then add `interactive_execute()` function after `prompt_for_group()`:
@@ -161,7 +168,7 @@ def interactive_execute(
     verbose: bool = False,
     file_sizes_map: dict[str, dict[str, int]] | None = None,
     cross_fs_files: set[str] | None = None,
-) -> tuple[int, int, int, int, list, int, int]:
+) -> tuple[int, int, int, int, list[FailedOperation], int, int]:
     """Execute with per-group interactive confirmation.
 
     Displays each group, prompts y/n/a/q, executes immediately on confirmation.
@@ -187,11 +194,10 @@ def interactive_execute(
     failure_count = 0
     skipped_count = 0
     space_saved = 0
-    failed_list: list = []
+    failed_list: list[FailedOperation] = []
     confirmed_count = 0
     user_skipped_count = 0
     confirm_all = False
-    quit_requested = False
 
     total_groups = len(groups)
 
@@ -219,22 +225,34 @@ def interactive_execute(
             if confirm_all:
                 # Auto-confirm: show status, execute immediately
                 formatter.format_confirmation_status(confirmed=True)
-                # Execute this group
+                # Execute this group - mirror execute_all_actions pattern
                 for dup in duplicates:
+                    # Get file size BEFORE action (for space_saved calculation)
                     file_size = os.path.getsize(dup) if os.path.exists(dup) else 0
-                    s, f, sk, sp, fl = execute_action(
-                        action, master_file, dup,
+                    dup_hash = file_hashes.get(dup, "unknown") if file_hashes else "unknown"
+
+                    # Call execute_action with correct signature: (duplicate, master, action, ...)
+                    success, error, actual_action = execute_action(
+                        dup, master_file, action.value,
                         fallback_symlink=fallback_symlink,
-                        audit_logger=audit_logger,
-                        file_hash=file_hashes.get(dup) if file_hashes else None,
                         target_dir=target_dir,
                         dir2_base=dir2_base
                     )
-                    success_count += s
-                    failure_count += f
-                    skipped_count += sk
-                    space_saved += sp
-                    failed_list.extend(fl)
+
+                    # Log operation if audit logger provided
+                    if audit_logger:
+                        log_operation(audit_logger, actual_action, dup, master_file,
+                                      file_size, dup_hash, success, error)
+
+                    # Track counts per execute_all_actions pattern
+                    if actual_action == "skipped":
+                        skipped_count += 1
+                    elif success:
+                        success_count += 1
+                        space_saved += file_size
+                    else:
+                        failure_count += 1
+                        failed_list.append(FailedOperation(dup, error))
                 confirmed_count += 1
                 continue
 
@@ -243,21 +261,34 @@ def interactive_execute(
 
             if response == 'y':
                 formatter.format_confirmation_status(confirmed=True)
-                # Execute this group
+                # Execute this group - mirror execute_all_actions pattern
                 for dup in duplicates:
-                    s, f, sk, sp, fl = execute_action(
-                        action, master_file, dup,
+                    # Get file size BEFORE action (for space_saved calculation)
+                    file_size = os.path.getsize(dup) if os.path.exists(dup) else 0
+                    dup_hash = file_hashes.get(dup, "unknown") if file_hashes else "unknown"
+
+                    # Call execute_action with correct signature: (duplicate, master, action, ...)
+                    success, error, actual_action = execute_action(
+                        dup, master_file, action.value,
                         fallback_symlink=fallback_symlink,
-                        audit_logger=audit_logger,
-                        file_hash=file_hashes.get(dup) if file_hashes else None,
                         target_dir=target_dir,
                         dir2_base=dir2_base
                     )
-                    success_count += s
-                    failure_count += f
-                    skipped_count += sk
-                    space_saved += sp
-                    failed_list.extend(fl)
+
+                    # Log operation if audit logger provided
+                    if audit_logger:
+                        log_operation(audit_logger, actual_action, dup, master_file,
+                                      file_size, dup_hash, success, error)
+
+                    # Track counts per execute_all_actions pattern
+                    if actual_action == "skipped":
+                        skipped_count += 1
+                    elif success:
+                        success_count += 1
+                        space_saved += file_size
+                    else:
+                        failure_count += 1
+                        failed_list.append(FailedOperation(dup, error))
                 confirmed_count += 1
 
             elif response == 'n':
@@ -269,31 +300,42 @@ def interactive_execute(
                 remaining = total_groups - i
                 if remaining > 0:
                     formatter.format_remaining_count(remaining)
-                # Execute this group
+                # Execute this group - mirror execute_all_actions pattern
                 for dup in duplicates:
-                    s, f, sk, sp, fl = execute_action(
-                        action, master_file, dup,
+                    # Get file size BEFORE action (for space_saved calculation)
+                    file_size = os.path.getsize(dup) if os.path.exists(dup) else 0
+                    dup_hash = file_hashes.get(dup, "unknown") if file_hashes else "unknown"
+
+                    # Call execute_action with correct signature: (duplicate, master, action, ...)
+                    success, error, actual_action = execute_action(
+                        dup, master_file, action.value,
                         fallback_symlink=fallback_symlink,
-                        audit_logger=audit_logger,
-                        file_hash=file_hashes.get(dup) if file_hashes else None,
                         target_dir=target_dir,
                         dir2_base=dir2_base
                     )
-                    success_count += s
-                    failure_count += f
-                    skipped_count += sk
-                    space_saved += sp
-                    failed_list.extend(fl)
+
+                    # Log operation if audit logger provided
+                    if audit_logger:
+                        log_operation(audit_logger, actual_action, dup, master_file,
+                                      file_size, dup_hash, success, error)
+
+                    # Track counts per execute_all_actions pattern
+                    if actual_action == "skipped":
+                        skipped_count += 1
+                    elif success:
+                        success_count += 1
+                        space_saved += file_size
+                    else:
+                        failure_count += 1
+                        failed_list.append(FailedOperation(dup, error))
                 confirmed_count += 1
                 confirm_all = True
 
             elif response == 'q':
-                quit_requested = True
                 break
 
     except (KeyboardInterrupt, EOFError):
         print()  # Newline after ^C
-        quit_requested = True
 
     return (success_count, failure_count, skipped_count, space_saved,
             failed_list, confirmed_count, user_skipped_count)
@@ -305,6 +347,16 @@ Key behaviors from CONTEXT.md:
 - 'q' breaks loop immediately
 - KeyboardInterrupt/EOFError treated same as quit
 - Returns extended tuple with confirmed_count and user_skipped_count for summary
+
+**IMPORTANT: execute_action signature alignment**
+The execute_action function signature is: `execute_action(duplicate, master, action, fallback_symlink, target_dir, dir2_base) -> tuple[bool, str, str]`
+Returns `(success, error, actual_action)` - NOT a 5-tuple.
+
+Pattern from execute_all_actions (actions.py lines 210-226):
+1. Get `file_size = os.path.getsize(dup)` BEFORE calling execute_action
+2. Call `success, error, actual_action = execute_action(dup, master_file, action.value, ...)`
+3. If `audit_logger`: call `log_operation(audit_logger, actual_action, dup, master_file, file_size, file_hash, success, error)`
+4. Track counts: `if actual_action == "skipped": skipped_count += 1; elif success: success_count += 1, space_saved += file_size; else: failure_count += 1, failed_list.append(FailedOperation(dup, error))`
   </action>
   <verify>
 Run: `python3 -c "from filematcher.cli import interactive_execute; print('interactive_execute imported successfully')"`
