fix(20.1): revise plans based on checker feedback
- Update ROADMAP success criterion #2 to include name, version fields
- Fix test count: 39 -> 40 (actual count verified)
- Add explicit Task 1 action note about finalize() key_links
- Clarify action mode finalize() already uses master/duplicate
- Add Task 3 for CHANGELOG.md documentation (breaking change)
- Add CHANGELOG.md to files_modified and artifacts

--- a/.planning/phases/20.1-json-header-object-format/20.1-01-PLAN.md
+++ b/.planning/phases/20.1-json-header-object-format/20.1-01-PLAN.md
@@ -7,6 +7,7 @@ depends_on: []
 files_modified:
   - filematcher/formatters.py
   - tests/test_json_output.py
+  - CHANGELOG.md
 autonomous: true
 
 must_haves:
@@ -16,7 +17,7 @@ must_haves:
     - "Compare mode uses master/duplicate directory keys, not dir1/dir2"
     - "Unmatched arrays use unmatchedMaster/unmatchedDuplicate naming"
     - "Data arrays remain at root level (matches, duplicateGroups)"
-    - "All 39 JSON tests pass with new structure"
+    - "All 40 JSON tests pass with new structure"
   artifacts:
     - path: "filematcher/formatters.py"
       provides: "JsonActionFormatter with header object"
@@ -24,6 +25,9 @@ must_haves:
     - path: "tests/test_json_output.py"
       provides: "Updated JSON tests for header structure"
       contains: "header"
+    - path: "CHANGELOG.md"
+      provides: "Breaking change documentation"
+      contains: "JSON output schema v2.0"
   key_links:
     - from: "filematcher/formatters.py"
       to: "tests/test_json_output.py"
@@ -36,7 +40,7 @@ Restructure JSON output with unified header object for better machine parsing
 
 Purpose: Current JSON has metadata scattered at root level with inconsistent naming between compare/action modes. This restructuring consolidates metadata into a header object with consistent directory naming, enabling better schema evolution and machine consumption.
 
-Output: Updated JsonActionFormatter that produces header-based JSON structure, and updated test suite validating the new schema.
+Output: Updated JsonActionFormatter that produces header-based JSON structure, updated test suite validating the new schema, and breaking change documentation.
 </objective>
 
 <execution_context>
@@ -96,7 +100,8 @@ Modify JsonActionFormatter class to produce header-based JSON structure:
 
 3. Update `finalize()` method for action modes (lines 504-508):
    - Build header with mode="preview" or "execute", include "action" field
-   - Output format:
+   - Action mode finalize() already outputs directories.master/duplicate via set_directories(), so header should use those existing values
+   - Restructure output to include header:
      ```json
      {
        "header": {...},
@@ -110,6 +115,7 @@ Modify JsonActionFormatter class to produce header-based JSON structure:
 4. Update `format_unmatched_section()` method (lines 398-410):
    - Change internal storage keys from "unmatchedDir1"/"unmatchedDir2" to "unmatchedMaster"/"unmatchedDuplicate"
    - Update summary field names accordingly
+   - Note: Compare mode finalize() (lines 481-482) reads these keys to build output, so ensure both storage AND output use the new names
 
 5. Remove redundant top-level fields from `_data` initialization (lines 243-254):
    - "timestamp", "mode", "action", "directories" move to header construction in finalize()
@@ -122,7 +128,7 @@ Key implementation notes:
 - Maintain existing sorting for determinism
   </action>
   <verify>
-Run targeted test that validates JSON structure:
+Run targeted test that validates JSON structure, then run full test suite:
 ```bash
 python3 -c "
 from filematcher.formatters import JsonActionFormatter
@@ -159,10 +165,13 @@ assert 'header' in data2, 'Missing header object in action mode'
 assert data2['header']['action'] == 'hardlink', 'Missing action field'
 print('Action mode header: OK')
 "
+
+# Run full test suite to verify no regressions
+python3 run_tests.py
 ```
   </verify>
   <done>
-JsonActionFormatter produces JSON with header object containing name, version, timestamp, mode, hashAlgorithm, directories. Compare mode uses master/duplicate keys. Action modes include action field in header.
+JsonActionFormatter produces JSON with header object containing name, version, timestamp, mode, hashAlgorithm, directories. Compare mode uses master/duplicate keys. Action modes include action field in header. Full test suite passes.
   </done>
 </task>
 
@@ -257,19 +266,52 @@ Key changes summary:
   <verify>
 Run the full JSON test suite:
 ```bash
-python3 -m pytest tests/test_json_output.py -v
+python3 -m tests.test_json_output
 ```
-All 39 tests should pass.
+All 40 tests should pass (40 existing tests, plus 2 new tests = 42 total after this task).
   </verify>
   <done>
 All JSON tests updated to validate header-based structure. Tests verify header contains name, version, timestamp, mode, hashAlgorithm, directories with master/duplicate keys. Unmatched field names updated to unmatchedMaster/unmatchedDuplicate.
   </done>
 </task>
 
+<task type="auto">
+  <name>Task 3: Document breaking change in release notes</name>
+  <files>CHANGELOG.md</files>
+  <action>
+Add a breaking change entry for the JSON schema restructuring:
+
+1. If CHANGELOG.md exists, add entry under the "Unreleased" or next version section
+2. If CHANGELOG.md doesn't exist, create it with standard format
+
+Entry should include:
+```markdown
+### Breaking Changes
+
+- **JSON output schema v2.0**: Restructured JSON output with unified header object
+  - All metadata (timestamp, mode, action, hashAlgorithm, directories) moved to `header` object
+  - Directory keys renamed: `dir1`/`dir2` -> `master`/`duplicate`
+  - Unmatched arrays renamed: `unmatchedDir1`/`unmatchedDir2` -> `unmatchedMaster`/`unmatchedDuplicate`
+  - Header includes `name` ("filematcher") and `version` ("2.0") fields for schema identification
+  - Migration: Update JSON parsers to access metadata via `data.header.*` instead of `data.*`
+```
+
+This documents the breaking change so consumers know to update their parsers.
+  </action>
+  <verify>
+```bash
+grep -q "JSON output schema v2.0" CHANGELOG.md && echo "Breaking change documented: OK"
+```
+  </verify>
+  <done>
+Breaking change documented in CHANGELOG.md with migration guidance for JSON consumers.
+  </done>
+</task>
+
 </tasks>
 
 <verification>
-1. Run full JSON test suite: `python3 -m pytest tests/test_json_output.py -v` - all 39+ tests pass
+1. Run full JSON test suite: `python3 -m tests.test_json_output` - all 42+ tests pass
 2. Run full test suite: `python3 run_tests.py` - all tests pass (no regressions)
 3. Manual verification of JSON output structure:
    ```bash
@@ -279,6 +321,7 @@ All JSON tests updated to validate header-based structure. Tests verify header c
    # Action mode
    python3 file_matcher.py test_dir1 test_dir2 --json --action hardlink | python3 -c "import sys,json; d=json.load(sys.stdin); print('header.action:', d.get('header',{}).get('action'))"
    ```
+4. Verify CHANGELOG.md contains breaking change documentation
 </verification>
 
 <success_criteria>
@@ -287,8 +330,9 @@ All JSON tests updated to validate header-based structure. Tests verify header c
 3. Header.directories uses master/duplicate keys (not dir1/dir2)
 4. Action modes include action field in header
 5. Unmatched arrays renamed to unmatchedMaster/unmatchedDuplicate
-6. All JSON tests pass (39+ tests)
+6. All JSON tests pass (42+ tests after adding new tests)
 7. Full test suite passes (no regressions)
+8. Breaking change documented in CHANGELOG.md
 </success_criteria>
 
 <output>
